--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "chrome-aws-lambda": "^10.0.0",
+    "emailjs-com": "^3.1.0",
     "next": "11.0.1",
     "puppeteer-core": "^10.1.0",
     "react": "17.0.2",
